Use java-gradle-plugin in tests
Some tests were creating and testing plugins without the java-gradle-plugin. Update
those tests to use java-gradle plugin.

* Removes need to add --add-opens flag manually in tests
* Update java-gradle-plugin to add --add-opens for java versions > 9 instead of > 16 to avoid stderr warning