@@ -25,17 +25,17 @@ abstract class BaseGradleImplDepsIntegrationTest extends AbstractIntegrationSpec
     }
 
     static String applyJavaPlugin() {
-        """
-            plugins {
-                id 'java'
-            }
-        """
+        applyPlugins(['java'])
     }
 
     static String applyGroovyPlugin() {
+        applyPlugins(['groovy'])
+    }
+
+    static String applyPlugins(List<String> plugins) {
         """
             plugins {
-                id 'groovy'
+                ${plugins.collect { "id '$it'\n"}.join('')}
             }
         """
     }
@@ -88,36 +88,30 @@ abstract class BaseGradleImplDepsIntegrationTest extends AbstractIntegrationSpec
         """
     }
 
-    static String testablePluginProject(String appliedLanguagePlugin = applyGroovyPlugin()) {
+    static String testableProject(List<String> plugins = ['groovy']) {
         StringBuilder buildFile = new StringBuilder()
-        buildFile <<= appliedLanguagePlugin
-        buildFile <<= mavenCentralRepository()
-        buildFile <<= gradleApiDependency()
-        buildFile <<= testKitDependency()
-        buildFile <<= junitDependency()
+        buildFile << applyPlugins(plugins)
+        buildFile << mavenCentralRepository()
+        buildFile << gradleApiDependency()
+        buildFile << testKitDependency()
+        buildFile << junitDependency()
         buildFile.toString()
     }
 
-    static String testablePluginProjectWithAddOpens(String appliedLanguagePlugin = applyGroovyPlugin()) {
-        return """
-            ${testablePluginProject(appliedLanguagePlugin)}
-            // Needed when using ProjectBuilder
-            class AddOpensArgProvider implements CommandLineArgumentProvider {
-                private final Test test;
-                public AddOpensArgProvider(Test test) {
-                    this.test = test;
+    static String testablePluginProject(List<String> plugins = ['groovy']) {
+        StringBuilder buildFile = new StringBuilder()
+        buildFile << testableProject(['java-gradle-plugin']  + plugins)
+        buildFile << """
+            gradlePlugin {
+                plugins {
+                    plugin {
+                        id = "my-plugin"
+                        implementationClass = "MyPlugin"
+                    }
                 }
-                @Override
-                Iterable<String> asArguments() {
-                    return test.javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)
-                        ? ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
-                        : []
-                }
-            }
-            tasks.withType(Test).configureEach {
-                jvmArgumentProviders.add(new AddOpensArgProvider(it))
             }
         """
+        buildFile.toString()
     }
 
     static void assertSingleGenerationOutput(String output, String regex) {
